# airspy-fmradion

./: .clang-format  .clangd  .cmake-format.py  .gitignore  .gitmodules  CHANGES.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL-latest-libvolk.md  NOTES.txt  README.md  TODO.txt  VULNERABILITY_REPORT.md  device-test.md  libairspyhf.md  libfmt.md  libsndfile.md  libvolk.md  macOS-libvolk-install.md  main.cpp  modernize-print.yaml  pyfm.py
.github/: FUNDING.yml
doc/: 20230908-portaudio-callback-test.diff  FIXES_CLAUDE_20260502.md  FIXES_CLAUDE_20260504.md  NOTES-jj1bdx.md  QMM-noise-filter.md  TODO-jj1bdx.md  airspy-linearity-gain.py  all-float.diff.txt  amradion-debug.py  amradion.py  analyze-block-coeff-polar.py  antenna-system-eval.txt  check-curve1.py  check-curve2.py  check-curve3.py  curve1.csv  curve2.csv  decimation-filter-20190303.txt  fm-pll-analysis-20210115.txt  fm-pll-analysis-20210607.txt  fm-pll-constants-20210116.txt  fm-pll-filtereval-nested.py  fm-pll-filtereval-single.py  fm-pll-filtereval.py  fmradio-debug.py  fmradio.py  fmradion-debug.py  fmradion.py  gpsdo-limitation-20240517.md  jobkfm-thd-n-20190714.txt  lame-192kbps-example.sh  logarithmic-agc.graffle  minimizer-output.txt  multipath-suppression.diff  old-README-until-2023.md  sincfilter-minimize.csv  sincfilter-minimize.py  sincfilter-sourcegen.cpp  sincfilter-sourcegen.py  softfm-jj1bdx-README.md  (+1 more)
doc/OLD-libvolk/: previous-libvolk-installation-before-2.5.1.md
doc/airspy-filter-coefficients/: 10000kHz-div8-60taps.py  3000kHz-div5.py  52.083333kHz-100taps-coeff.txt  600-and-625kHz-div2-coeff.txt  README.md
doc/airspyhf-filter-coefficients/: 384kHz-div4-64taps-coeff.txt  384kHz-div4-64taps.ih_fir  768kHz-div2-72taps.ih_fir  96kHz-div2-fmaudio-120taps-v2-coeff.txt
doc/filter-design/: 10000kHz-div8-48taps-coeff.txt  10000kHz-div8-48taps.ih_fir  10000kHz-div8-60taps.ih_fir  1200kHz-div4.py  1250kHz-div4-60taps-coeff.txt  1250kHz-div4-60taps.ih_fir  1250kHz-div4-80taps.ih_fir  12kHz-3.0kHz-64taps-coeff.txt  12kHz-3.0kHz-64taps.ih_fir  12kHz-4.0kHz-64taps-coeff.txt  12kHz-cw-500Hz-255taps-coeff.txt  12kHz-cw-500Hz-255taps.ih_fir  12kHz-cw-500Hz-383taps.ih_fir  12kHz-ssb-1500Hz-383taps-coeff.txt  12kHz-ssb-1500Hz-383taps.ih_fir  2500kHz-div4-48taps-coeff.txt  2kHz-cw-250Hz-127taps-coeff.txt  2kHz-cw-250Hz-127taps.ih_fir  3000kHz-div5.ih_fir  312.5kHz-div4-80taps-coeff.txt  312.5kHz-div4-80taps.ih_fir  384kHz-242kHz-127taps-coeff.txt  384kHz-242kHz-127taps.ih_fir  384kHz-312kHz-127taps-coeff.txt  384kHz-312kHz-127taps.ih_fir  384kHz-60kHz-255taps-coeff.txt  384kHz-60kHz-255taps.ih_fir  48kHz-am-12kHz-15kHz-511taps-coeff.txt  48kHz-am-12kHz-15kHz-511taps.ih_fir  48kHz-am-3kHz-255taps-coeff.txt  48kHz-am-3kHz-255taps.ih_fir  48kHz-am-4.5kHz-255taps-coeff.txt  48kHz-am-4.5kHz-255taps.ih_fir  48kHz-am-6kHz-255taps-coeff.txt  48kHz-am-6kHz-255taps.ih_fir  (+52 more)
doc/filter-design-am/: 12kHz-4.0kHz-64taps.ih_fir  12kHz-ssb-3to6kHz-127taps-coeff.txt  12kHz-ssb-3to6kHz-127taps.ih_fir  192kHz-div4-17taps-coeff.txt  192kHz-div4-17taps.ih_fir  192kHz-div4-27taps-coeff.txt  24kHz-div2-64taps-coeff.txt  24kHz-div2-64taps.ih_fir  48kHz-div2-27taps-coeff.txt  48kHz-div2-27taps.ih_fir  768kHz-div4-17taps-coeff.txt  768kHz-div4-17taps.ih_fir  768kHz-div4-27taps.ih_fir  if-div2-16taps.ih_fir  if-div2-73taps-coeff.txt  if-div2-73taps.ih_fir  if-div3-16taps-coeff.txt  if-div3-16taps.ih_fir  if-div3-73taps-coeff.txt  if-div3-73taps.ih_fir  if-div4-27taps.ih_fir  if-div4-73taps-coeff.txt  if-div4-73taps.ih_fir  if-div5-34taps-coeff.txt  if-div5-34taps.ih_fir  if-div5-73taps-coeff.txt  if-div5-73taps.ih_fir  if-div6-73taps-coeff.txt  if-div6-73taps.ih_fir  if-div7-48taps-coeff.txt  if-div7-48taps.ih_fir  if-div7-73taps-coeff.txt  if-div7-73taps.ih_fir  if-div8-73taps-coeff.txt  if-div8-73taps.ih_fir
doc/filter-design-fm/: 10000kHz-iqconverter-47taps-coeff.txt  10000kHz-iqconverter-47taps.ih_fir  1250kHz-div4-60taps-coeff.txt  1250kHz-div4-60taps.ih_fir  1250kHz-div4-80taps-coeff.txt  1250kHz-div4-80taps.ih_fir  2500kHz-div4-48taps.ih_fir  48kHz-fmaudio-127taps.ih_fir  48kHz-fmaudio-58taps-coeff.txt  600-and-625kHz-div2-32taps.ih_fir  6000kHz-div5-48taps-coeff.txt  6000kHz-div5-48taps.ih_fir  625kHz-div2-64taps-coeff.txt  625kHz-div2-64taps.ih_fir  768kHz-div2-64taps-coeff.txt  768kHz-div2-95taps-medium-kaiser-coeff.txt  768kHz-div2-95taps-medium-kaiser.ih_fir  768kHz-div2-95taps-wide-kaiser-coeff.txt  768kHz-div2-95taps-wide-kaiser.ih_fir  768kHz-div2-96taps-kaiser-coeff.txt  768kHz-div2-96taps-narrow-kaiser.ih_fir  900kHz-div3-42taps.ih_fir  900kHz-div3-64taps-coeff.txt  900kHz-div3-64taps.ih_fir  fmif-div2-79taps-kaiser-coeff.txt  fmif-div2-79taps-kaiser.ih_fir  fmif-div3-79taps-kaiser-coeff.txt  fmif-div3-79taps-kaiser.ih_fir  fmif-div4-79taps-kaiser-coeff.txt  fmif-div4-79taps-kaiser.ih_fir
include/: AfAgc.h  AfFastAgc.h  AfSimpleAgc.h  AirspyHFSource.h  AirspySource.h  AmDecode.h  AudioOutput.h  AudioResampler.h  BladeRFSource.h  ConfigParser.h  DataBuffer.h  EqParameters.h  FileSource.h  Filter.h  FilterParameters.h  FineTuner.h  FmDecode.h  FourthConverterIQ.h  FourthDownconverterIQ.h  HackRFSource.h  IfAgc.h  IfDownsampler.h  IfResampler.h  IfSimpleAgc.h  MovingAverage.h  MultipathFilter.h  NbfmDecode.h  PhaseDiscriminator.h  PilotPhaseLock.h  RtlSdrSource.h  SoftFM.h  Source.h  Utility.h  fast_atan2f.h  fastatan2.h  git.h  parsekv.h  util.h
libvolk-Apple-M1/: patch-cpu_features-add-support-for-ARM64.diff.txt
pa_ringbuffer/: README.md
sfmbase/: AfAgc.cpp  AfFastAgc.cpp  AfSimpleAgc.cpp  AirspyHFSource.cpp  AirspySource.cpp  AmDecode.cpp  AudioOutput.cpp  AudioResampler.cpp  BladeRFSource.cpp  ConfigParser.cpp  EqParameters.cpp  FileSource.cpp  Filter.cpp  Filter.new.cpp  Filter.old.cpp  FilterParameters.cpp  FineTuner.cpp  FmDecode.cpp  HackRFSource.cpp  IfAgc.cpp  IfDownsampler.cpp  IfResampler.cpp  IfSimpleAgc.cpp  MultipathFilter.cpp  NbfmDecode.cpp  PhaseDiscriminator.cpp  PilotPhaseLock.cpp  RtlSdrSource.cpp  Utility.cpp
txt-f4exb/: README-f4exb.md
txt-jorisvr/: README.original.txt
(+113 files in other folders)
